# PhishVault

./: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  go.mod  go.sum
.GitHub/: FUNDING.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: pull-request-.md
Reports/: 18thJune2025.md
Reports/Backend-Reports/: #PV-071225.md  17thJune2025.md  18thJune2025.md  27thJune2025.md
Reports/Frontend-Reports/: 18thJune2025.md  19thJune2025.md
cli/: main.go  styles.go
cli-go/: commands.go  main.go
cli-go/integration/: bridge.go
cli-go/views/: dashboard.go  login.go  scanner.go  styles.go
cli-rust/: Cargo.toml
cli-rust/src/: main.rs
cli-rust/src/modules/: app.rs  events.rs  logger.rs  mod.rs  scanner.rs  theme.rs  ui.rs
cmd/scanner/: main.go
core/domain/: graph.go  sal.go
deploy/: docker-compose.yml  schema.sql
devdocs/: PhishVault-2-Development-Plan.md  PhishVault-2-Phase1-Plan.md  PhishVault-2-Phase2-Plan.md  PhishVault-2-TW.md
newideas/: PhishVault-2-Phase2-Plan.md  PhishVault-2-Phase3-Plan.md  PhishVault-2-TW.md
phishvault-backend/: .env  README.md  devbackend.sh  docker-compose.yml  package-lock.json  package.json  scans.json  server.js
phishvault-backend/controllers/: reportController.js  scanController.js
phishvault-backend/models/: Scan.js
phishvault-backend/routes/: reportRoutes.js  scanRoutes.js  scrapingRoutes.js
phishvault-backend/services/: puppeteerService.js  (+1 more)
phishvault-frontend/: README.md  devfrontend.sh  package-lock.json  package.json  tailwind.config.js
(+61 files in other folders)
